Refactor navigation list items for consistency

--- a/index.html
+++ b/index.html
@@ -17,24 +17,32 @@
       <h1 class="logo">Jeffrey Lauwers</h1>
       <nav class="navigation">
         <ul class="navigation-list">
-          <li class="navigation-list-item">
-            <a href="#work"> Werk </a>
+          <li class="navigation-list__item">
+            <a class="navigation-list__link" href="#work">
+              Werk
+            </a>
           </li>
-          <li class="navigation-list-item">
-            <a href="#quotes"> Quotes </a>
+          <li class="navigation-list__item">
+            <a class="navigation-list__link" href="#quotes">
+              Quotes
+            </a>
           </li>
-          <li class="navigation-list-item">
-            <a href="#about"> Over mij </a>
+          <li class="navigation-list__item">
+            <a class="navigation-list__link" href="#about">
+              Over mij
+            </a>
           </li>
-          <li class="navigation-list-item">
-            <a href="#contact"> Contact </a>
+          <li class="navigation-list__item">
+            <a class="navigation-list__link" href="#contact">
+              Contact
+            </a>
           </li>
         </ul>
       </nav>
     </header>
 
     <div class="disclaimer full-width">
-      <p class="paragraph disclaimer-content">
+      <p class="paragraph disclaimer__content">
         Disclaimer: Deze pagina is nog lang niet af. Ik werk er soms aan. Dus
         mocht je hier terecht komen en denken "Huh! Dat klopt niet!"... dat
         klopt.
