Update author titles in quotes section

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Tibor den Held, Designer, Web developer NS Design System
+            Tibor den Held - Designer en front-end developer NS Design System
           </figcaption>
         </figure>
 
@@ -262,7 +262,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Bas Zweeris, Product Owner NS Design System
+            Bas Zweeris - Product Owner NS Design System
           </figcaption>
         </figure>
 
@@ -278,7 +278,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Michael Vermeulen, Designer NN Design System
+            Michael Vermeulen - Designer NN Design System
           </figcaption>
         </figure>
 
@@ -293,8 +293,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Marjon Bakker, Senior adviseur digitale toegankelijkheid bij Firm
-            Ground
+            Marjon Bakker - Adviseur digitale toegankelijkheid
           </figcaption>
         </figure>
 
@@ -309,7 +308,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Hidde de Vries, Toegankelijkheidsspecialist bij NL Design System
+            Hidde de Vries - Specialist digitale toegankelijkheid
           </figcaption>
         </figure>
 
@@ -325,7 +324,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Rozerin Ayerdem, Designer NL Design System
+            Rozerin Ayerdem - Designer bij NL Design System
           </figcaption>
         </figure>
 
@@ -340,7 +339,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Yolijn van der Kolk, Productmanager NL Design System
+            Yolijn van der Kolk - Productmanager bij NL Design System
           </figcaption>
         </figure>
       </section>
