Fix formatting in index.html
Corrected a minor formatting issue in the text.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               (interactie)patronen. Ik voer de regie op de werking van de
               community vanuit het design perspectief om zo kennis en kunde te
               bundelen. Ik onboard en enthousiasmeer designers om via NL Design
-              System te werken. Vervolgens help ze met design system
+              System te werken. Vervolgens help ik ze met design system
               gerelateerde vraagstukken en jaag hergebruik en samenwerking aan.
             </p>
           </li>
