Update author titles in quotes in index.html

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Tibor den Held - Designer en front-end developer NS Design System
+            Tibor den Held - Design Engineer bij NS Design System
           </figcaption>
         </figure>
 
@@ -262,7 +262,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Bas Zweeris - Product Owner NS Design System
+            Bas Zweeris - Product Owner bij NS Design System
           </figcaption>
         </figure>
 
@@ -278,7 +278,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Michael Vermeulen - Designer NN Design System
+            Michael Vermeulen - Designer bij NN Design System
           </figcaption>
         </figure>
 
@@ -293,7 +293,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Marjon Bakker - Adviseur digitale toegankelijkheid
+            Marjon Bakker - Adviseur digitale toegankelijkheid bij het Kadaster
           </figcaption>
         </figure>
 
