--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <section>
         <h2 class="heading-display">Pragmatische probleem-oplosser.</h2>
         <p class="paragraph-lead">
-          Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om op te ruimen en mensen te helpen. Dat doe ik digitaal ook als Senior Product Designer bij <a href="https://valsplat.nl/">Valsplat</a>.
+          Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om op te ruimen en mensen te helpen. Dat doe ik digitaal ook als Senior Designer bij <a href="https://valsplat.nl/">Valsplat</a>.
         </p>
         <p class="paragraph-lead">
           Ik werk graag aan grote, complexe projecten en ben gespecialiseerd in design systems en digitale toegankelijkheid (CPACC).
